# DynamicResourceAllocator

allocation-prototype/: .gitignore  AGENT_NOTES.md  FINAL_REPORT.md  README.md  RUN_REPORT_2026-03-30.md  VALIDATION_SUMMARY.md  alembic.ini  audit_pytest_output.txt  final_pytest_output.txt  overview.md  pyproject.toml
allocation-prototype/alembic/: env.py
allocation-prototype/data/: simulation_presets.json
allocation-prototype/demo/: common.py  demo_conflict.py  demo_counterfactual.py  demo_fairness.py  demo_replay.py  demo_scenario_compare.py  demo_sdm.py  zomato_allocation_payload.json
allocation-prototype/docs/: SYSTEM_QUALITY_GUIDE.md
allocation-prototype/frontend/: app.js  index.html  styles.css
allocation-prototype/scripts/: generate_realistic_sample.py  generate_sample_datasets.py  generate_zomato_sample_datasets.py  prepare_zomato_data.py  validate_large_datasets.py  validate_sample_datasets.py
allocation-prototype/tests/: api_test_utils.py  conftest.py  test_api_allocate.py  test_api_audit.py  test_api_lifecycle.py  test_conflict_detection.py  test_counterfactual.py  test_diagnostics.py  test_fairness_gini.py  test_frontend.py  test_manifest.py  test_mutation_options.py  test_presentation_api.py  test_realistic_dataset_allocations.py  test_rejection_query.py  test_replay.py  test_reservation.py  test_rule_on_time_rate.py  test_rule_traffic_adjusted_proximity.py  test_rule_vehicle_condition.py  test_rule_weather_safety.py  test_sample_datasets.py  test_schema_compatibility.py  test_simulation_presets.py  test_vehicle_compatibility.py  (+2 more)
(+60 files in other folders)
